RxJava and Dagger in project

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ecf0f1"
-    tools:context="com.irwancannady.indonesiamountain.HomeActivity">
+    tools:context="com.irwancannady.indonesiamountain.mainview.HomeActivity">
 
     <!--<android.support.v7.widget.Toolbar-->
         <!--android:id="@+id/toolbar2"-->
